# mps-spectro

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-pypi.yml  release-testpypi.yml
scripts/: benchmark.py  benchmark_audio_separator.py
src/mps_spectro/: __init__.py  _torch_ops.py  autograd.py  compiler.py  istft.py  mel.py  stft.py
src/mps_spectro/metal/: _shaders.py  custom_mps_istft.mm  custom_mps_istft_kernel.h
tests/: test_autograd.py  test_golden_fixtures.py  test_layout_parity.py  test_mel_frontend.py  test_regression_smoke.py  test_stft_regression_smoke.py  test_torch_compile.py
tests/fixtures/: istft_golden_fixtures.json
